--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Node, Express and Mongo</title>
+    <title>Zine Dream Catalog</title>
   </head>
   <body>
     <h1>Current Zine Catalog</h1>
@@ -12,7 +12,7 @@
         <li class="zine">
           <p><b>Title:</b> <%= zines[i].title || zines[i].Title %> </p>
             <% if (zines[i]["Sub title"] !='undefined'){ %>
-            <i>  <%= zines[i]["Sub title"] %></i>
+            Subtitle: <i>  <%= zines[i]["Sub title"] %></i>
             <% } %>
           <p><b>Creator: </b> <%= zines[i].creator || zines[i].Creator %></p>
 
