showing more details about the flywheel zine

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,6 +15,10 @@
             Subtitle: <i>  <%= zines[i]["Sub title"] %></i>
             <% } %>
           <p><b>Creator: </b> <%= zines[i].creator || zines[i].Creator %></p>
+          <p>Volume: <%= zines[i]["Volume"] %></p>
+          <p>Number: <%= zines[i]["Number"] %></p>
+          <p>Date: <%= zines[i]["Date"] %></p>
+
 
         </li>
       <% } %>
