added public dir, added main.js file for running put requests

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,9 @@
           <p>Volume: <%= zines[i]["Volume"] %></p>
           <p>Number: <%= zines[i]["Number"] %></p>
           <p>Date: <%= zines[i]["Date"] %></p>
-
+          <div>
+            <button id="update"> Update </button>
+          </div>
 
         </li>
       <% } %>
