--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Zine Dream Catalog</title>
+        <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Current Zine Catalog</h1>
