404 not found error for root route,  WIP

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Zine Dream Catalog</title>
-        <link rel="stylesheet" href="style.css" />
+        <!-- <link rel="stylesheet" href="style.css" /> -->
   </head>
   <body>
     <h1>Current Zine Catalog</h1>
@@ -37,7 +37,7 @@
   <input type="text" placeholder="creator" name="creator">
   <button type="submit">Submit</button>
 </form>
-<script src="main.js"></script>
+<!-- <script src="main.js"></script> -->
   </body>
 </html>
 
